--- a/docs/v3/package.json
+++ b/docs/v3/package.json
@@ -22,7 +22,7 @@
     "check-pages": "^0.10.0",
     "cheerio": "^1.0.0-rc.3",
     "gulp": "^4.0.2",
-    "gulp-cli": "^2.0.1"
+    "gulp-cli": "^2.0.1",
     "gulp": "^4.0.0",
     "gulp-cli": "^2.3.0"
   },
